--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.12.1"
+    "cozy-konnector-libs": "4.12.1",
+    "jsdom": "^13.1.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "4.6.0",
