--- a/package.json
+++ b/package.json
@@ -18,32 +18,37 @@
   "eslintIgnore": [
     "build"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "scripts": {
     "start": "node ./src/index.js",
-    "dev": "cozy-run-dev",
-    "standalone": "cozy-run-standalone",
+    "dev": "cozy-konnector-dev",
+    "standalone": "cozy-konnector-standalone",
+    "pretest": "npm run clean",
     "test": "konitor testit .",
     "check": "konitor check .",
+    "clean": "rm -rf ./data",
     "build": "webpack",
-    "precommit": "yarn lint",
     "lint": "eslint --fix .",
     "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-git@github.com:git@github.com:konnectors/leroymerlin.git",
     "cozyPublish": "cozy-app-publish --token $REGISTRY_TOKEN --build-commit $(git rev-parse ${DEPLOY_BRANCH:-build})",
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.12.1"
+    "cozy-konnector-libs": "4.32.1"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "4.6.0",
-    "cozy-app-publish": "0.9.1",
-    "cozy-jobs-cli": "1.6.1",
-    "eslint": "4.19.1",
-    "eslint-config-cozy-app": "0.10.0",
+    "copy-webpack-plugin": "5.0.5",
+    "cozy-app-publish": "0.20.0",
+    "cozy-jobs-cli": "1.10.5",
+    "eslint-config-cozy-app": "1.3.3",
     "git-directory-deploy": "1.5.1",
-    "husky": "0.14.3",
-    "konitor": "0.10.1",
-    "webpack": "4.28.0",
-    "webpack-cli": "2.1.5"
+    "husky": "3.1.0",
+    "konitor": "0.10.3",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10"
   }
 }
