--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "url": "git@github.com:konnectors/leroymerlin.git"
   },
   "keywords": [],
-  "author": "Cozy",
+  "author": "Cozy Cloud",
   "license": "AGPL-3.0",
   "main": "./src/index.js",
   "eslintConfig": {
     "extends": [
-      "eslint-config-cozy-app"
+      "cozy-app"
     ]
   },
   "eslintIgnore": [
@@ -20,7 +20,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "yarn lint"
     }
   },
   "scripts": {
@@ -28,12 +28,11 @@
     "dev": "cozy-konnector-dev",
     "standalone": "cozy-konnector-standalone",
     "pretest": "npm run clean",
-    "test": "konitor testit .",
     "check": "konitor check .",
     "clean": "rm -rf ./data",
     "build": "webpack",
     "lint": "eslint --fix .",
-    "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-git@github.com:git@github.com:konnectors/leroymerlin.git",
+    "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-$npm_package_repository_url}",
     "cozyPublish": "cozy-app-publish --token $REGISTRY_TOKEN --build-commit $(git rev-parse ${DEPLOY_BRANCH:-build})",
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
@@ -42,11 +41,11 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "5.1.1",
-    "cozy-app-publish": "0.20.0",
+    "cozy-app-publish": "0.20.2",
     "cozy-jobs-cli": "1.11.2",
-    "eslint-config-cozy-app": "1.3.3",
+    "eslint-config-cozy-app": "1.4.0",
     "git-directory-deploy": "1.5.1",
-    "husky": "3.1.0",
+    "husky": "4.2.1",
     "konitor": "0.10.3",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10"
