--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "dev": "cozy-konnector-dev",
     "standalone": "cozy-konnector-standalone",
     "pretest": "npm run clean",
-    "check": "konitor check .",
     "clean": "rm -rf ./data",
     "build": "webpack",
     "lint": "eslint --fix .",
@@ -40,13 +39,7 @@
     "cozy-konnector-libs": "4.37.1"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "6.2.1",
-    "cozy-app-publish": "0.26.0",
     "cozy-jobs-cli": "1.15.1",
-    "eslint-config-cozy-app": "2.0.0",
-    "git-directory-deploy": "1.5.1",
-    "husky": "4.3.0",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.2.0"
+    "cozy-konnector-build": "1.1.1"
   }
 }
